# fcdmft

./: README.md  pyproject.toml
examples/NiO/: nio_dft.py  nio_gw.py  nio_set_ham.py  run_dft  run_dmft  run_dmft.py  run_gw  run_ham
examples/NiO/CAS-CCSD/: run_dmft.py
examples/Si/: run_dmft  run_dmft.py  run_gw  run_ham  si_gw.py  si_set_ham.py
examples/Si/CAS-CCSD/: run_dmft.py
examples/SrMoO3/: README.md  run_dmft.py  srmoo3_gw.py  srmoo3_interpolate.py  srmoo3_lda.py  srmoo3_set_ham.py
examples/interpolation/: diamond_gw_interpolate.py  diamond_gw_interpolate_iao.py  diamond_hf_interpolate.py
fcdmft/dmft/: dmft_solver.py  gwdmft.py
fcdmft/gw/mol/: gw_dc.py  gw_gf.py  ugw_ac.py
fcdmft/gw/pbc/: krgw_ac.py  krgw_gf.py
fcdmft/rpa/mol/: rpa.py  urpa.py
fcdmft/rpa/pbc/: krpa.py  kurpa.py  rpa.py  urpa.py
fcdmft/solver/: casno.py  ccgf.py  gfdmrg_sz.py  scf_mu.py  ucc_eri.py
fcdmft/utils/: cholesky.py  interpolate.py
src/fcdmft/dmft/: run_dmft.py
src/fcdmft/gw/mol/: gw_ac.py  ugw_dc.py  ugw_gf.py
src/fcdmft/gw/pbc/: kugw_ac.py  kugw_gf.py
src/fcdmft/solver/: gfdmrg.py  gmres.py  mpiccgf.py  mpiuccgf.py  uccgf.py
src/fcdmft/utils/: write.py
